Fix dark mode colors + remove orange hover effect

--- a/src/UI/config/css/base.css
+++ b/src/UI/config/css/base.css
@@ -109,8 +109,8 @@ header {
 }
 
 .box-visible:hover {
-    box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.055), 0 0 20px 1px rgba(255, 87, 45, 0.63), 0 9px 46px 8px rgba(0, 0, 0, 0.055) !important;
-    transform: translateY(-3px);
+    background-color: #F8F8F8 !important;
+    transform: translateY(-2px);
 }
 
 .box-hidden {
@@ -176,12 +176,12 @@ input[type="number"]:disabled {
     background-color: #FBFBFB !important;
     margin: 5px;
     border-radius: 5px;
-    transition: box-shadow 0.23s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.1s linear, transform 230ms cubic-bezier(0.19, 1, 0.22, 1);
+    transition: box-shadow 0.23s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.1s linear, transform 240ms cubic-bezier(0.19, 1, 0.22, 1), visibility 0.1s, height 0.2s linear;
     box-shadow: rgba(0, 0, 0, 0.18) 0 2px 4px, rgba(0, 0, 0, 0.15) 0 0.5px 1px ;
 }
 
 .tag:hover {
-    box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.055), 0 0 20px 0 rgba(255, 87, 45, 0.63), 0 9px 46px 8px rgba(0, 0, 0, 0.055);
+    background-color: #F8F8F8 !important;
     transform: translateY(-4px);
 }
 
