--- a/src/UI/config/css/dark.css
+++ b/src/UI/config/css/dark.css
@@ -1,17 +1,17 @@
 body {
-    background-color: #232323 !important;
-    scrollbar-base-color: #232323;
-    scrollbar-face-color: #4d4d4d;
-    scrollbar-3dlight-color: #4d4d4d;
-    scrollbar-highlight-color: #4d4d4d;
-    scrollbar-track-color: #232323;
-    scrollbar-arrow-color: #232323;
-    scrollbar-shadow-color: #4d4d4d;
+    background-color: #272727 !important;
+    scrollbar-base-color: #272727;
+    scrollbar-face-color: #4E4E4E;
+    scrollbar-3dlight-color: #4E4E4E;
+    scrollbar-highlight-color: #4E4E4E;
+    scrollbar-track-color: #272727;
+    scrollbar-arrow-color: #272727;
+    scrollbar-shadow-color: #4E4E4E;
 }
 
 header {
     color: #d9d9d9 !important;
-    background: #232323 !important;
+    background: #272727 !important;
 }
 
 .title-btn-minimize:hover,
@@ -24,22 +24,28 @@ header {
 }
 
 .box{
-    background-color: #2e2e2e !important;
+    background-color: #323232 !important;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
 .input-elem {
-    background-color: #363636 !important;
+    background-color: #323232 !important;
 }
 
 .tag{
-    background-color: #2e2e2e !important;
+    background-color: #323232 !important;
     margin: 5px;
 }
 
 .tag.option {
     border: #ff572d solid 1px;
 }
+
+.box:hover,
+.tag:hover{
+    background-color: #303030 !important;
+}
+
 
 a:hover,
 p,
